# comp-aided-logic-design

./: .gitignore  Makefile  README.md
and2gate/: and2gate.xpr
and2gate/and2gate.cache/wt/: gui_resources.wdf  java_command_handlers.wdf  synthesis.wdf  webtalk_pa.xml
and2gate/and2gate.runs/.jobs/: vrs_config_1.xml
and2gate/and2gate.runs/synth_1/: .vivado.begin.rst  and2gate.dcp  and2gate.tcl  and2gate.vds  and2gate_utilization_synth.rpt  gen_run.xml  htr.txt  project.wdf  rundef.js  runme.sh  vivado.jou  vivado.pb
assignment_1/: NETLISTS_LAT.txt  README.txt  assignment_1.xpr
assignment_1/assignment_1.cache/wt/: gui_resources.wdf  java_command_handlers.wdf  synthesis.wdf  webtalk_pa.xml
assignment_1/assignment_1.runs/.jobs/: vrs_config_161.xml  vrs_config_19.xml  vrs_config_202.xml
assignment_1/assignment_1.runs/impl_1/: .init_design.begin.rst  .opt_design.begin.rst  .place_design.begin.rst  .route_design.begin.rst  .vivado.begin.rst  ADD_5243.backup.vdi  REG_15189.backup.vdi  SUB.tcl  SUB.vdi  SUB_clock_utilization_routed.rpt  SUB_control_sets_placed.rpt  SUB_drc_opted.rpt  SUB_drc_routed.rpt  SUB_drc_routed.rpx  (+171 more)
assignment_1/dakre/: DPCL_LAT.txt  NETLISTS_LAT.txt  README.txt  circuit2.v  circuit5.v
assignment_2/dakre_dpgen/: CMakeLists.txt  README.txt  runme.sh
assignment_3/dakre_hlsyn/: CMakeLists.txt  README.txt  runme.sh
assignment_3/dakre_hlsyn/src/: CMakeLists.txt  GraphHelper.h  HLSConstants.h  HLSEngine.cpp  HLSEngine.h  HLSGraphHelper.h  hlsyn.cpp
hw_0/: README.md  hw_0.xpr
hw_0/dakre_hw_0/: README.md
lec_8_26_ex/: lec_8_26_ex.xpr
(+323 files in other folders)
